Developed Email Receipt Sending Feature & Fixed bugs
